--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".EditProfile"></activity>
+        <activity android:name=".TripDetails"></activity>
+        <activity android:name=".EditProfile" />
         <activity android:name=".ProfilePage" />
         <activity
             android:name=".HomeActivity"
