--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,12 +44,16 @@ dependencies {
     implementation 'com.google.firebase:firebase-storage:19.1.1'
     implementation 'com.google.firebase:firebase-database:19.3.0'
     implementation 'com.google.firebase:firebase-database:19.3.0'
-    implementation 'com.google.maps.android:android-maps-utils:0.4.3'
+    implementation 'com.google.maps.android:android-maps-utils:1.0.2'
     implementation 'com.google.android.gms:play-services-places:17.0.0'
     implementation 'com.google.android.gms:play-services-location:17.0.0'
     implementation "com.google.firebase:firebase-core:17.4.0"
     implementation "com.google.android.gms:play-services-gcm:17.0.0"
     implementation 'com.google.android.libraries.places:places:2.2.0'
+    //noinspection GradleCompatible
+    implementation 'com.android.support:recyclerview-v7:28.0.0'
+    //noinspection GradleCompatible
+    implementation 'com.android.support:cardview-v7:28.0.0'
 
 }
 apply plugin: 'com.google.gms.google-services'
