--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,6 +56,9 @@ dependencies {
     implementation 'com.android.support:recyclerview-v7:28.0.0'
     //noinspection GradleCompatible
     implementation 'com.android.support:cardview-v7:28.0.0'
+    //Circle ImageView
+    implementation 'de.hdodenhof:circleimageview:3.1.0'
+
 
 }
 apply plugin: 'com.google.gms.google-services'
