--- a/build.gradle
+++ b/build.gradle
@@ -24,7 +24,9 @@ allprojects {
         maven {
             url "https://maven.google.com"
         }
-        
+        maven {
+            url  "https://microsoft-maps.bintray.com/Maven"
+        }
     }
 }
 
