--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,6 @@
 apply plugin: 'com.android.application'
 apply plugin: 'com.google.gms.google-services'
+apply from: 'secrets.gradle'
 
 android {
     compileSdkVersion 29
@@ -19,6 +20,9 @@ android {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+        }
+        buildTypes.each {
+            it.buildConfigField "String", "CREDENTIALS_KEY", "\"$credentialsKey\""
         }
     }
 
@@ -45,7 +49,7 @@ dependencies {
 
     implementation 'com.google.firebase:firebase-database:19.3.0'
     implementation 'com.google.maps.android:android-maps-utils:1.0.2'
-    implementation 'com.google.maps.android:android-maps-utils:0.4.3'
+    implementation 'com.google.maps.android:android-maps-utils:1.0.2'
     implementation 'com.firebaseui:firebase-ui-database:0.6.2'
     implementation 'com.google.android.gms:play-services-places:17.0.0'
     implementation 'com.google.android.gms:play-services-location:17.0.0'
@@ -58,6 +62,8 @@ dependencies {
     implementation 'com.android.support:cardview-v7:28.0.0'
     //Circle ImageView
     implementation 'de.hdodenhof:circleimageview:3.1.0'
+
+    implementation 'com.microsoft.maps:maps-sdk:1.0.0'
 
 
 }
